--- a/practical_2_git/README
+++ b/practical_2_git/README
@@ -1,1 +1,2 @@
-These are Codes for Practical 2, Conversion.C counts the number of binary digits in a given integer or float, Sum.c is a C propgram that uses loop to calculate the sum of an expression and shows the rounding off error.
+Conversion.C counts the number of binary digits in a given integer or float
+Sum.c is a C propgram that uses loop to calculate the sum of an expression and shows the rounding-off error.
