Updates in README in directory

--- a/Use Subroutines in C/README
+++ b/Use Subroutines in C/README
@@ -1,2 +1,2 @@
-In Practical 4 We use Subroutines to find out the area by approximaion using trapezoidal rule.
+Use Subroutines to find out the area by approximaion using trapezoidal rule.
 I made two subroutines one for converting degree to radian and the other to find out the area using the formula.
